--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -41,6 +41,9 @@ format = "[${symbol}${pyenv_prefix}${version}( \\($virtualenv\\))]($style) "
 
 [nodejs]
 detect_extensions = []
+format = "$symbol [$version]($style) "
+version_format = "{raw}"
+symbol = "node"
 
 [custom.deno]
 command = """ sed "s/deno //g" <<< "$(deno -V)" """
