--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -12,9 +12,9 @@ $nodejs\
 $golang\
 $rust\
 $python\
+$shlvl\
 $cmd_duration\
 $status\
-$shlvl\
 $line_break\
 $character"""
 
@@ -26,6 +26,7 @@ time_format = "%T"
 [hostname]
 format = "\\[ [$hostname](green) \\] "
 ssh_only = false
+trim_at = "_"
 
 [directory]
 format = "[$read_only]($read_only_style)[$path]($style) "
@@ -58,13 +59,16 @@ version_format = "$raw"
 
 [shlvl]
 disabled = false
-format = "\\[ [$shlvl]($style) \\] "
 style = "red"
+symbol = "🌌 "
 
 [status]
 disabled = false
-format = "$symbol [$status $common_meaning $signal_name](red) "
+format = "$symbol [$status $common_meaning](red) "
 map_symbol = true
+not_executable_symbol = "🔒"
+sigint_symbol = "🛑"
+signal_symbol = "📡"
 symbol = "💣"
 
 [cmd_duration]
