--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -26,7 +26,7 @@ time_format = "%T"
 [hostname]
 format = "\\[ [$hostname](green) \\] "
 ssh_only = false
-trim_at = "_"
+trim_at = "-"
 
 [directory]
 format = "[$read_only]($read_only_style)[$path]($style) "
